[package]
name = "apix10"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-secrets = "0.16.0"
shuttle-runtime = "0.16.0"
rocket = {version = "0.5.0-rc.3", features = ["json"]}
shuttle-rocket = "0.16.0"
tokio = "1.28.1"
anyhow = "1.0.71"
serde = "1.0.136"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"]
